--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,24 +1,22 @@
 <ion-content [fullscreen]="true" class="login">
   <ion-header>
-    <h3>Login <span class="login_link">or <a  routerLink="/pages/registration">Registry</a></span></h3>
+    <h3>{{ 'PAGES.LOGIN.TITLE' | translate }}
+      <span class="login_link">{{ 'SHARED.PHRASES.OR' | translate }} <a  routerLink="/pages/registration">{{ 'PAGES.LOGIN.REGISTRATION' | translate }}</a></span>
+    </h3>
   </ion-header>
   <form [appLoading]="loading$ | async">
     <ion-item>
-      <ion-label position="floating">Email</ion-label>
+      <ion-label position="floating">{{ 'PAGES.LOGIN.EMAIL' | translate }}</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="floating">Password</ion-label>
+      <ion-label position="floating">{{ 'PAGES.LOGIN.PASSWORD' | translate }}</ion-label>
       <ion-input type="password"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label>Remember me</ion-label>
-      <ion-checkbox slot="end" checked="checked"></ion-checkbox>
     </ion-item>
 
     <ion-footer>
-      <ion-button color="primary">Login</ion-button>
-      <a routerLink="/pages/forgot-password">forgot your password?</a>
+      <ion-button color="primary">{{ 'PAGES.LOGIN.SIGNIN' | translate }}</ion-button>
+      <a routerLink="/pages/forgot-password">{{ 'PAGES.LOGIN.FORGOT_PASSWORD' | translate }}</a>
     </ion-footer>
   </form>
 </ion-content>
