--- a/src/app/pages/blood-pressure/blood-pressure.component.html
+++ b/src/app/pages/blood-pressure/blood-pressure.component.html
@@ -1,17 +1,14 @@
-<!--<app-blood-pressure-item-new></app-blood-pressure-item-new>
-<app-blood-pressure-chart></app-blood-pressure-chart>
-<app-blood-pressure-table></app-blood-pressure-table>-->
-<ion-tabs>
-    <ion-tab-bar slot="bottom">
-        <ion-tab-button tab="data">
-            <ion-icon name="calendar"></ion-icon>
-            <ion-label>{{ 'PAGES.BLOOD_PRESSURE.CALENDAR' | translate }}</ion-label>
-        </ion-tab-button>
-    </ion-tab-bar>
-    <ion-tab-bar slot="bottom">
-        <ion-tab-button tab="item">
-            <ion-icon name="create"></ion-icon>
-            <ion-label>{{ 'PAGES.BLOOD_PRESSURE.CREATE_PRESSURE' | translate }}</ion-label>
-        </ion-tab-button>
-    </ion-tab-bar>
-</ion-tabs>`
+<ion-content [scrollEvents]="true" >
+    <div style="justify-content: flex-start;">
+        <app-blood-pressure-item-new
+                (saveBloodPressureEmitter)="saveBloodPressureAction($event)"
+        ></app-blood-pressure-item-new>
+        <app-blood-pressure-chart
+                [bloodPressureList]="bloodPressureList"
+        ></app-blood-pressure-chart>
+        <app-blood-pressure-table
+                [bloodPressureList]="bloodPressureList"
+                (removeBloodPressureEmitter)="removeBloodPressureAction($event)"
+        ></app-blood-pressure-table>
+    </div>
+</ion-content>
