--- a/src/app/pages/registration/registration.component.html
+++ b/src/app/pages/registration/registration.component.html
@@ -43,6 +43,14 @@
       <ion-input type="text"></ion-input>
     </ion-item>
     <ion-item>
+      <ion-label position="floating">{{ 'PAGES.REGISTRATION.SEX' | translate }} </ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">{{ 'PAGES.REGISTRATION.YOUR_DOCTOR' | translate }} </ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+    <ion-item>
       <ion-label position="floating">{{ 'PAGES.REGISTRATION.TRANSPLANT_ORGAN' | translate }}</ion-label>
       <ion-select
               okText="{{ 'SHARED.BUTTONS.OK' | translate }}"
