--- a/src/app/modules/blood-pressure/components/blood-pressure-item-new/blood-pressure-item-new.component.html
+++ b/src/app/modules/blood-pressure/components/blood-pressure-item-new/blood-pressure-item-new.component.html
@@ -1,15 +1,15 @@
 <form [formGroup]="bloodPressureForm" >
   <ion-item>
     <ion-label position="floating">{{ 'PAGES.BLOOD_PRESSURE.ITEM_NEW.PRESSURE_LOW' | translate }}</ion-label>
-    <ion-input type="number" formControlName="low"></ion-input>
+    <ion-input type="number" formControlName="lowPressure"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">{{ 'PAGES.BLOOD_PRESSURE.ITEM_NEW.PRESSURE_HEIGHT' | translate }}</ion-label>
-    <ion-input type="number" formControlName="height"></ion-input>
+    <ion-input type="number" formControlName="heightPressure"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">{{ 'PAGES.BLOOD_PRESSURE.ITEM_NEW.DATA' | translate }}</ion-label>
-    <ion-datetime formControlName="data" displayFormat="DD MMMM YYYY" placeholder="{{ 'PAGES.BUTTONS.SELECT_DATA' | translate }}" min="1950" max="2022"></ion-datetime>
+    <ion-datetime formControlName="date" displayFormat="DD MMMM YYYY" placeholder="{{ 'PAGES.BUTTONS.SELECT_DATA' | translate }}" min="1950" max="2022"></ion-datetime>
   </ion-item>
   <ion-item>
     <ion-button (click)="saveBloodPressureAction()">
