--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -49,13 +49,13 @@ ion-menu.md ion-item {
   border-radius: 4px;
 }
 
-ion-menu.md ion-item.selected {
+/*ion-menu.md ion-item.selected {
   --background: rgba(var(--ion-color-primary-rgb), 0.14);
 }
 
 ion-menu.md ion-item.selected ion-icon {
   color: var(--ion-color-primary);
-}
+}*/
 
 ion-menu.md ion-item ion-icon {
   color: #616e7e;
@@ -114,6 +114,13 @@ ion-note {
   color: var(--ion-color-medium-shade);
 }
 
-ion-item.selected {
+/*ion-item.selected {
   --color: var(--ion-color-primary);
+}*/
+
+.main-menu_icon {
+  margin: 0 10px;
+}
+.main-menu_sub-item {
+  padding-left: 20px;
 }
