--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,5 +1,41 @@
 .login {
   &_link {
     font-size: 12px;
+    padding: 0 10px;
+  }
+  &-footer {
+    padding: 10px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  &-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 0;
+    &_form-field {
+      width: 100%;
+      padding: 0 10px
+    }
+  }
+
+  &-header {
+    padding: 10px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    h3 {
+      margin: 0;
+    }
+    span, a {
+      font-size: 12px;
+    }
+
+    &_registration {
+      font-size: 12px;
+    }
   }
 }
