--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -3,16 +3,16 @@
         <ion-buttons slot="start">
             <ion-menu-button></ion-menu-button>
         </ion-buttons>
-        <ion-title>{{ pageName }}</ion-title>
+       <!-- <ion-title>{{ pageName }}</ion-title>-->
     </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-    <ion-header collapse="condense">
+  <!--  <ion-header collapse="condense">
         <ion-toolbar>
             <ion-title size="large">{{ pageName }}</ion-title>
         </ion-toolbar>
-    </ion-header>
+    </ion-header>-->
 
     <div id="container">
        <ion-router-outlet class="pages"></ion-router-outlet>
