--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -11,5 +11,11 @@
       </ion-select-option>
     </ion-select>
   </ion-item>
+  <ion-item>
+    1. Возвраст
+    2. Код рождения
+    3. Рост
+    4. Цель веса
+  </ion-item>
 </form>
 
