--- a/src/app/pages/diary/components/blood-pressure/blood-pressure.component.html
+++ b/src/app/pages/diary/components/blood-pressure/blood-pressure.component.html
@@ -1,3 +1,15 @@
-<p>
-  blood-pressure works!
-</p>
+<ion-app>
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="research">
+        <ion-icon name="calendar"></ion-icon>
+        <ion-label>Обзор</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="history">
+        <ion-icon name="map"></ion-icon>
+        <ion-label>История</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
+</ion-app>
