--- a/src/app/pages/diary/components/weight/components/weight-history/weight-history.component.html
+++ b/src/app/pages/diary/components/weight/components/weight-history/weight-history.component.html
@@ -16,7 +16,7 @@
     <!-- Symbol Column -->
     <ng-container matColumnDef="diff">
       <th mat-header-cell *matHeaderCellDef  mat-sort-header width="80px"> Разница </th>
-      <td mat-cell *matCellDef="let element" [style.color]="element.diff > 0 ? 'red' : 'green' "> {{ element.diff }} kg</td>
+      <td mat-cell *matCellDef="let element" [style.color]="element.diff > 0 ? 'red' : 'green' "> <span  *ngIf="element.diff">{{ element.diff }} kg</span></td>
     </ng-container>
 
     <!-- Checkbox Column -->
