--- a/src/app/pages/diary/components/weight/weight.component.html
+++ b/src/app/pages/diary/components/weight/weight.component.html
@@ -6,12 +6,22 @@
         <ion-label>Обзор</ion-label>
       </ion-tab-button>
 
-    <ion-tab-button tab="history">
-      <ion-icon name="map"></ion-icon>
-      <ion-label>История</ion-label>
-    </ion-tab-button>
-  </ion-tab-bar>
-</ion-tabs>
+      <ion-tab-button tab="statistic">
+        <ion-icon name="stats-chart-outline"></ion-icon>
+        <ion-label>Статистика</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="history">
+        <ion-icon name="map"></ion-icon>
+        <ion-label>История</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="settings">
+        <ion-icon name="settings"></ion-icon>
+        <ion-label>Настройки</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
 </ion-app>
 <!--<div class="weight">
   <div class="weight-header">
