--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -1,21 +1,59 @@
-<form [formGroup]="settingsForm" class="setting-page">
-  <ion-item>
-    <ion-label position="floating">{{ 'PAGES.SETTINGS.FORM.SELECT_LANGUAGE' | translate }}</ion-label>
-    <ion-select
-            formControlName="language"
-            okText="{{ 'SHARED.BUTTONS.OK' | translate }}"
-            cancelText="{{ 'SHARED.BUTTONS.CANCEL' | translate }}"
-            placeholder="{{ 'PAGES.BUTTONS.SELECT_ONE' | translate }}">
-      <ion-select-option *ngFor="let lang of languagesList">
-        {{ lang }}
-      </ion-select-option>
-    </ion-select>
-  </ion-item>
-  <ion-item>
-    1. Возвраст
-    2. Код рождения
-    3. Рост
-    4. Цель веса
-  </ion-item>
-</form>
+  <form (ngSubmit)="saveSettingsAction()">
+    <div class="app-settings">
+      <div class="app-settings_form-field">
+        <mat-form-field appearance="outline" class="app-settings_form-field">
+          <mat-label>Имя</mat-label>
+          <input matInput type="text" placeholder="Ваше имя" [formControl]="nameControl">
+        </mat-form-field>
+      </div>
+      <div class="app-settings_form-field">
+        <mat-form-field appearance="outline" class="app-settings_form-field">
+          <mat-label>Рост</mat-label>
+          <input matInput type="number" placeholder="Ваш рост в см" [formControl]="growthControl">
+        </mat-form-field>
+      </div>
+      <div class="app-settings_form-field">
+        <mat-form-field appearance="outline" class="app-settings_form-field">
+          <mat-label>Пол</mat-label>
+          <mat-select [formControl]="sexControl">
+            <mat-option value="man">Мужской</mat-option>
+            <mat-option value="woman">Женский</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div class="app-settings_form-field">
+        <mat-form-field appearance="outline" class="app-settings_form-field">
+          <mat-label>Дата рождения</mat-label>
+          <input matInput [matDatepicker]="datepickerBirthday" [formControl]="birthdayControl">
+          <mat-datepicker-toggle matSuffix [for]="datepickerBirthday"></mat-datepicker-toggle>
+          <mat-datepicker #datepickerBirthday></mat-datepicker>
+        </mat-form-field>
+      </div>
+      <div class="app-settings_form-field">
+        <mat-form-field appearance="outline" class="app-settings_form-field">
+          <mat-label>Пересаженный орган</mat-label>
+          <mat-select [formControl]="transplantOrganControl">
+            <mat-option value="Kidney">Почка</mat-option>
+            <mat-option value="Liver">Печень</mat-option>
+            <mat-option value="Lungs">Легкие</mat-option>
+            <mat-option value="Heart">Сердце</mat-option>
+            <mat-option value="Pancreas">Поджелудочная железа</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div class="app-settings_form-field">
+        <mat-form-field appearance="outline" class="app-settings_form-field">
+          <mat-label>Дата трансплантации</mat-label>
+          <input matInput [matDatepicker]="datepickerTransplantDate" [formControl]="transplantDateControl">
+          <mat-datepicker-toggle matSuffix [for]="datepickerTransplantDate"></mat-datepicker-toggle>
+          <mat-datepicker #datepickerTransplantDate></mat-datepicker>
+        </mat-form-field>
+      </div>
+    </div>
+
+    <ion-footer class="app-settings-footer">
+      <button mat-raised-button color="primary">Сохранить</button>
+    </ion-footer>
+  </form>
+
 
