--- a/src/app/pages/diary/components/weight/components/weight-item-dialog/weight-item-dialog.component.html
+++ b/src/app/pages/diary/components/weight/components/weight-item-dialog/weight-item-dialog.component.html
@@ -4,7 +4,7 @@
       Вес
     </h3>
   </ion-header>
-  <form [formGroup]="weightFormGroup" (ngSubmit)="saveAction()">
+  <form [formGroup]="weightFormGroup">
     <div class="weight-item-dialog-content">
       <div class="weight-item-dialog-content_form-field">
         <mat-form-field appearance="outline" class="weight-item-dialog-content_form-field">
