--- a/src/app/pages/diary/components/weight/components/weight-research/weight-research.component.html
+++ b/src/app/pages/diary/components/weight/components/weight-research/weight-research.component.html
@@ -42,7 +42,7 @@
     </div>
     <div class="weight-research-footer_new">
       <button mat-fab color="primary" (click)="openDialog()">
-        <mat-icon>add</mat-icon>
+        <fa-icon icon="plus"></fa-icon>
       </button>
     </div>
     <div class="weight-research-footer_stock">
