--- a/src/app/pages/diary/components/weight/components/weight-settings/weight-settings.component.html
+++ b/src/app/pages/diary/components/weight/components/weight-settings/weight-settings.component.html
@@ -2,7 +2,7 @@
   <ion-header class="weight-settings-header">
     <h3> Настройки веса </h3>
   </ion-header>
-  <form [formGroup]="weightSettingsFormGroup" (ngSubmit)="saveSettingsAction()">
+  <form [formGroup]="weightSettingsFormGroup">
     <div class="weight-settings-content">
       <div class="weight-settings-content_form-field">
         <mat-form-field appearance="outline" class="weight-settings-content_form-field">
