--- a/src/app/pages/diary/components/weight/components/weight-settings/weight-settings.component.scss
+++ b/src/app/pages/diary/components/weight/components/weight-settings/weight-settings.component.scss
@@ -8,6 +8,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    button {
+      width: 100%;
+      margin: 20px;
+    }
   }
   &-content {
     display: flex;
