--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,19 +1,16 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" class="pages-header">
     <ion-toolbar>
         <ion-buttons slot="start">
             <ion-menu-button></ion-menu-button>
         </ion-buttons>
-       <!-- <ion-title>{{ pageName }}</ion-title>-->
+        <ion-title>{{ pageName }}</ion-title>
+        <div class="pages-header_profile">
+            <a routerLink="/pages/profile"><fa-icon icon="user"></fa-icon></a>
+        </div>
     </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <!--  <ion-header collapse="condense">
-        <ion-toolbar>
-            <ion-title size="large">{{ pageName }}</ion-title>
-        </ion-toolbar>
-    </ion-header>-->
-
     <div id="container">
        <ion-router-outlet class="pages"></ion-router-outlet>
     </div>
