--- a/src/app/pages/settings/settings.component.scss
+++ b/src/app/pages/settings/settings.component.scss
@@ -1,16 +1,40 @@
 .app-settings {
-  &_form-field {
-    width: 100%;
+  &_link {
+    font-size: 12px;
     padding: 0 10px;
+  }
+  &-footer {
+    padding: 10px 0;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+
+    button {
+      width: 100%;
+      margin: 20px;
+    }
+  }
+  &-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 0;
+
+    &_form-field {
+      width: 100%;
+      padding: 0 10px
+    }
   }
 
-  &-footer {
+  &-header {
+    padding: 10px 0;
     display: flex;
-    justify-content: center;
     align-items: center;
-    padding: 10px;
+    justify-content: center;
+
+    h3 {
+      margin: 0;
+    }
   }
 }
